--- a/style.css
+++ b/style.css
@@ -77,6 +77,13 @@ img{
     display: flex;
     align-items: center;
 }
+.office-img{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    padding: 20px;
+}
 @media (max-width:768px) {
     .nav-link{
         display: none;
