--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 .navbar{
     display: flex;
-    justify-content:right;
+    justify-content:flex-end;
     align-items: center;
     padding: 15px 30px;
     background-color: beige;
@@ -23,7 +23,7 @@
     font-size: 18px;
     transition: color o.3s;
 }
-.nav-link a :hover{
+.nav-link a:hover {
     color: skyblue;
 }
 .hamburger{
@@ -41,7 +41,7 @@
 }
 img{
     height: 500px;
-    width: 100rem;
+    width: 100%;
     filter: brightness(1);
 }
 .service-container{
@@ -77,9 +77,9 @@ img{
    transition: transform 0.3s ease-in-out;
    margin-top: 10px;
 }
-.home-img :hover{
+.home-img:hover{
     transform: scale(1.1);
-    box-shadow: 0 4px 8px rgba(o, 0, 0, 0.2);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 .text{
     
@@ -89,7 +89,7 @@ img{
     max-width: 600px;
     margin: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(o, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
 .office-img{
@@ -103,10 +103,10 @@ img{
     width: 200px;
     height: auto;
     border-radius: 8px;
-    box-shadow: 2px 2px 10px rgba(o, 0, 0, 0.1);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out;
 }
-.text img :hover{
+.text img:hover{
     transform: scale(1.1);
 }
 .Read-more-btn{
@@ -121,14 +121,13 @@ img{
     font-size: 14px;
     transition: 0.3s;
 }
-.Read-more-btn :hover {
+.Read-more-btn:hover {
     background-color: deepskyblue;
 }
 .full-text{
     display: none;
-    font-size: 14px;
-    color:#555;
-    margin-top: 10px;
+    
+   ;
 }
 .text p{
     font-size: 16px;
