--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
-
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color:white ;
+}
 .navbar{
     display: flex;
     justify-content:flex-end;
