--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body{
     padding: 15px 30px;
     background-color: beige;
     color: black;
-    width: 1070px;
+    width: 1070%;
+    max-width: 1070px;
 }
 h2{
     display: flex;
@@ -88,6 +89,10 @@ img{
     justify-content: center;
     gap: 10px;
     padding: 20px;
+    align-items: center;
+    margin: auto;
+    width: 90%;
+    max-width: 800px;
 }
 .home_img{
     display: flex;
@@ -124,6 +129,10 @@ img{
     justify-content: center;
     gap: 10px;
     padding: 20px;
+    max-width: 800px;
+    align-items: center;
+    margin: auto;
+    width: 90%;
 }
 .text img{
     width: 200px;
