--- a/style.css
+++ b/style.css
@@ -136,6 +136,18 @@ img{
     margin: auto;
     width: 90%;
 }
+.custom-img{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+    padding: 20px;
+    max-width: 800px;
+    align-items: center;
+    margin: auto;
+    width: 90%;
+}
+
 .text img{
     width: 200px;
     height: auto;
