--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
     height: 100vh;
     margin: 0;
     background-color:white ;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .navbar{
     display: flex;
@@ -15,6 +16,7 @@ body{
     color: black;
     width: 93%;
     max-width: 1070px;
+   
 }
 h2{
     display: flex;
