--- a/style.css
+++ b/style.css
@@ -25,15 +25,18 @@ h2{
 }
 .navbar{
     list-style: none;
-    display: flex;
-    gap: 2rem;
-    top: 60px;
-    left: 0;
+   
     width: 100%;
     color: white;
-    padding: 20px;
-    box-sizing: border-box;
+ 
+    transition: max-height 0.5s ease;
+    overflow: hidden;
+    background-color: #333;
+    max-height:0 ;
    
+}
+.navbar .show{
+    max-height: 300px;
 }
 .navbar ul{
     list-style-type: none;
@@ -52,18 +55,15 @@ h2{
     text-decoration: underline;
 }
 .hamburger{
-    display: block;
-
     cursor: pointer;
     width: 30px;
-    
 }
 .bar{
-    height: 3px;
+    height: 4px;
     background-color: black;
     border-radius: 2px;
     margin: 5px 0;
-    width: 100%;
+
 }
 .hidden{
     display:none;
