--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+
     margin: 0;
     background-color:white ;
     font-family: Arial, Helvetica, sans-serif;
+}
+header{
+    position: relative;
+    padding: 10px 30px;
+    background-color: beige;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 .navbar{
     display: flex;
@@ -24,8 +29,8 @@ h2{
     justify-content: center;
 }
 .navbar{
-    list-style: none;
    
+   padding: 50px;
     width: 100%;
     color: white;
  
@@ -41,6 +46,7 @@ h2{
 .navbar ul{
     list-style-type: none;
     padding: 0;
+    margin: 0;
 }
 .navbar ul li{
     flex-direction: column;
@@ -54,9 +60,13 @@ h2{
     color: skyblue;
     text-decoration: underline;
 }
+.navbar li{
+    padding: 10px 20px;
+}
 .hamburger{
     cursor: pointer;
     width: 30px;
+    display: none;
 }
 .bar{
     height: 4px;
@@ -65,9 +75,7 @@ h2{
     margin: 5px 0;
 
 }
-.hidden{
-    display:none;
-}
+
 img{
     height: 500px;
     width: 100%;
