--- a/style.css
+++ b/style.css
@@ -3,15 +3,17 @@
     margin: 0;
     background-color: white;
     font-family: Arial, Helvetica, sans-serif;
+   background-image: url(image/img\ copy.jpeg);
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-position: center;
 }
 
 header {
     position: relative;
-    padding: 10px 30px;
+    padding: 10px ;
     background-color: beige;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    box-shadow: o 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 h2 {
@@ -24,51 +26,30 @@ h2 {
 .navbar {
     display: flex;
     justify-content: flex-end;
-    align-items: center;
-    padding: 15px 30px;
-    background-color: beige;
-    color: black;
-    width: 93%;
-    max-width: 1070px;
+    margin-bottom: 15px;
+   
 }
 
-.navbar {
-    padding: 50px;
-    width: 100%;
-    color: white;
-    transition: max-height 0.5s ease;
-    overflow: hidden;
-    background-color: #333;
-    max-height: 0;
+.navbar ul{
+   list-style: none;
+   padding: 0;
+   margin: 0;
+   display: flex;
+   gap: 30px;
 }
-
-.navbar .show {
-    max-height: 300px;
-}
-
-.navbar ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-.navbar ul li {
-    flex-direction: column;
-}
-
-.navbar ul li a {
+.navbar a{
     text-decoration: none;
-    color: black;
-    font-size: 18px;
+    color: aqua;
+    font-weight: bold;
+    transition: color 0.3s ease;
 }
-
 .navbar ul li a:hover {
     color: skyblue;
     text-decoration: underline;
 }
 
 .navbar li {
-    padding: 10px 20px;
+    display: inline;
 }
 
 .hamburger {
@@ -85,11 +66,7 @@ h2 {
 }
 
 /* Image Styles */
-img {
-    height: 500px;
-    width: 100%;
-    filter: brightness(1);
-}
+
 h1{
     color: #007acc;
 }
