--- a/style.css
+++ b/style.css
@@ -1,19 +1,20 @@
- /* General Styles */
- body {
+/* General Styles */
+body {
     margin: 0;
     background-color: white;
     font-family: Arial, Helvetica, sans-serif;
-   background-image: url(image/img\ copy.jpeg);
-   background-size: cover;
-   background-repeat: no-repeat;
-   background-position: center;
+    background-image: url(image/index.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+   
 }
 
 header {
     position: relative;
-    padding: 10px ;
+    padding: 10px;
     background-color: beige;
-    box-shadow: o 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 h2 {
@@ -27,22 +28,23 @@ h2 {
     display: flex;
     justify-content: flex-end;
     margin-bottom: 15px;
-   
 }
 
-.navbar ul{
-   list-style: none;
-   padding: 0;
-   margin: 0;
-   display: flex;
-   gap: 30px;
+.navbar ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    gap: 30px;
 }
-.navbar a{
+
+.navbar a {
     text-decoration: none;
     color: aqua;
     font-weight: bold;
     transition: color 0.3s ease;
 }
+
 .navbar ul li a:hover {
     color: skyblue;
     text-decoration: underline;
@@ -52,43 +54,33 @@ h2 {
     display: inline;
 }
 
-.hamburger {
-    cursor: pointer;
-    width: 30px;
-    display: none;
-}
 
-.bar {
-    height: 4px;
-    background-color: black;
-    border-radius: 2px;
-    margin: 5px 0;
-}
-
-/* Image Styles */
-
-h1{
+h1 {
     color: #007acc;
 }
-.about-section{
+
+.about-section {
     max-width: 800px;
     margin: 80px auto;
-    background-color: #ffffffff;
+    background-color: #ffffff;
     padding: 80px;
     border-radius: 12px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-.about-section h1{
+
+.about-section h1 {
     font-size: 2.8rem;
     color: #1e3d;
     margin-bottom: 25px;
     text-align: center;
 }
-.about-section p{
+
+.about-section p {
     font-size: 1.15em;
     line-height: 1.8;
     margin-bottom: 25px;
 }
+
 .home-img {
     display: flex;
     flex-wrap: wrap;
@@ -97,12 +89,8 @@ h1{
     padding: 20px;
     align-items: center;
     margin: auto;
-    width: 90%;
-    max-width: 800px;
-}
-
-.home-img {
     width: 100%;
+    max-width: 800px;
     height: auto;
     object-fit: cover;
     border-radius: 10px;
