--- a/style.css
+++ b/style.css
@@ -10,6 +10,18 @@ body {
    
 }
 
+
+    
+.iii{
+    background-color: grey;
+    padding: 20px;
+    width: 250px;
+    border-radius: 10px;
+    display: inline-block;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
+
 header {
     position: relative;
     padding: 10px;
