--- a/style.css
+++ b/style.css
@@ -1,23 +1,30 @@
 /* General Styles */
-body {
-    margin: 0;
-    background-color: white;
+*{
+    box-sizing: border-box;
+    padding: 0%;
+    margin: 0%;
+}
+body { 
+    background-attachment:fixed ;
+    min-height: 500px;
     font-family: Arial, Helvetica, sans-serif;
     background-image: url(image/index.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
    
+   
 }
 
 
 .about-service-container{
-  
+    margin: 20px;
     justify-content: center;
     gap: 200px;
     flex-wrap: wrap;
     padding: 20px;
     align-items: center;
+    padding: 20px;
 }
 #section{
     color: black;
@@ -39,6 +46,10 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center; 
 }
+a{
+    text-decoration: none;
+    color: black;
+}
 header {
     position: relative;
     padding: 10px;
@@ -55,22 +66,22 @@ h2 {
 /* Navbar Styles */
 .navbar {
     display: flex;
-    justify-content: flex-end;
-    margin-bottom: 15px;
+    justify-content: center;
+    align-items: center;
+
 }
 
 
 .navbar ul {
     list-style: none;
-    padding: 0;
-    margin: 0;
+ 
     display: flex;
     gap: 30px;
 }
 
 .navbar a {
     text-decoration: none;
-    color: aqua;
+    color: whitesmoke;
     font-weight: bold;
     transition: color 0.3s ease;
 }
