--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     padding: 0%;
     margin: 0%;
 }
-body { 
+#body { 
     background-attachment:fixed ;
     min-height: 500px;
     font-family: Arial, Helvetica, sans-serif;
@@ -71,7 +71,21 @@ h2 {
 
 }
 
-
+.INTERIOR{
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    color: whitesmoke;
+    
+}
+.word{
+    color: whitesmoke;
+    font-size: 80px;
+}
 .navbar ul {
     list-style: none;
  
@@ -226,6 +240,7 @@ h1 {
 .text img:hover {
     transform: scale(1.1);
 }
+
 
 /* Media Queries */
 @media (max-width: 768px) {
