--- a/style.css
+++ b/style.css
@@ -217,7 +217,15 @@ h1 {
     font-size: 14px;
     transition: all 0.3s ease;
 }
-
+.me{
+    background: gray;
+    padding: 20px;
+    width: 250px;
+    border-radius: 10px;
+    display: inline-block;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
 .Read-more-btn:hover {
     background-color: deepskyblue;
     transform: scale(1.05);
