--- a/style.css
+++ b/style.css
@@ -153,18 +153,18 @@ h1 {
 .home-img {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    gap: 10px;
-    padding: 15px;
-    align-items: center;
+   
+    padding: 2px;
+   
     margin: auto;
-    width: 100%;
-    max-width: 800px;
+    width: 100px;
+    max-width: 700px;
     height: auto;
     object-fit: cover;
     border-radius: 10px;
     transition: transform 0.3s ease-in-out;
     margin-top: 10px;
+    
    
 }
 
@@ -181,8 +181,8 @@ h1 {
     margin: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
     justify-content: center;
+    
 }
 
 /* Service Section */
@@ -246,6 +246,8 @@ h1 {
 .text img {
     width: 400px;
     height:400px;
+    justify-content: center;
+    align-items: center;
     border-radius: 8px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out;
