--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ h1 {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+
 .about-section h1 {
     font-size: 2.8rem;
     color: black;
@@ -152,20 +153,25 @@ h1 {
 }
 
 .home-img {
-    display: flex;
+    /* display: flex;
     flex-wrap: wrap;
    
     padding: 2px;
    
     margin: auto;
-    width: 100%;
+    width: 100;
     max-width: 700px;
-    height:100%;
+    height: auto;
     object-fit: cover;
     border-radius: 10px;
     transition: transform 0.3s ease-in-out;
-    margin-top: 10px;
-    
+    margin-top: 10px; */
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      padding: 15px;
+     
    
 }
 
@@ -174,15 +180,17 @@ h1 {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+.custom-img:hover{
+    transform: scale(1.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
 .text {
-    align-items: center;
-    background-color: snow;
-    width: 90%;
-    max-width: 600px;
-    margin: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    justify-content: center;
+ 
+     
+        display: flex;
+        justify-content: center; /* Center horizontally */
+        align-items: center; /* Center vertically */
+        min-height: 200px; /* Set a minimum height for vertical alignment */
     
 }
 
@@ -407,5 +415,6 @@ input, textarea {
         padding: 20px;
         margin: auto;
         width: 90%;
+    
     }
 }
