--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ a{
 header {
     position: relative;
     padding: 10px;
-    background-color: beige;
+    background-color: rgb(96, 81, 216);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
