--- a/style.css
+++ b/style.css
@@ -211,8 +211,9 @@ h1 {
     
 }
 
+
 /* Service Section */
-.service-container {
+.space{
     display: flex;
     justify-content: center;
     gap: 20px;
