--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ header {
    
 }
 
+.search-container{
+    overflow: hidden;
+    background-color: #e9e9e9;
+}
 
 
 h2 {
@@ -72,14 +76,17 @@ h2 {
 
 /* Navbar Styles */
 .navbar {
-    display: flex;
-    justify-content: center;
-    align-items: center; overflow: auto;
+    background-color: #333;
+    overflow: auto;
     white-space: nowrap;
-    
 
 }
-
+.hamburger-menu .line {
+    width: 30px;
+    height: 4px;
+    background-color: black;
+    border-radius: 5px;
+}
 .INTERIOR{
     align-items: center;
     justify-content: center;
@@ -454,5 +461,8 @@ input, textarea {
         margin: auto;
         width: 90%;
     
+    }
+    .hamburger-menu {
+        display: flex;
     }
 }
