--- a/style.css
+++ b/style.css
@@ -63,7 +63,6 @@ header {
 }
 
 .search-container{
-    overflow: hidden;
     background-color: #e9e9e9;
 }
 
@@ -74,13 +73,49 @@ h2 {
     justify-content: center;
 }
 
+.scroll-left, .scroll-right {
+    background: none;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+    padding: 10px;
+    color: #333;
+    z-index: 2;
+  }
 /* Navbar Styles */
 .navbar {
-    background-color: #333;
+    background-color: white;
     overflow: auto;
     white-space: nowrap;
+    color: #333;
+    flex-grow: 1;
 
 }
+/* Hide the scrollbar */
+.navbar::-webkit-scrollbar {
+    display: none; /* Hide the scrollbar */
+  }
+  .search-form{
+    
+    margin-top: 5px;
+  }
+  .search-form input{
+    padding: 8px;
+    border: none;
+    border-radius: 0 6px 6px 0;
+    width: 180px;
+    justify-content: right;
+    align-items: right;
+    margin-left: 900px;
+  }
+  .search-form .but{
+    padding: 8px 12px;
+    border: none;
+    background-color: #007acc;
+    color: white;
+    border-radius: 0 6px 6px 0;
+    cursor: pointer;
+  }
 .hamburger-menu .line {
     width: 30px;
     height: 4px;
@@ -108,10 +143,16 @@ h2 {
     display: flex;
     gap: 30px;
 }
-
+.this{
+    display: flex;
+    align-items: center;
+    position: relative;
+    
+    overflow: hidden;
+}
 .navbar a {
     text-decoration: none;
-    color: whitesmoke;
+    color:#333;
     font-weight: bold;
     transition: color 0.3s ease;
     padding: 14px;
