--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     background-attachment:fixed ;
     min-height: 500px;
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url(image/index.jpg);
+    background-image: url(joy.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -134,7 +134,7 @@ h2 {
     
 }
 .word{
-    color: whitesmoke;
+    color: black;
     font-size: 80px;
 }
 .navbar ul {
